# synfig

./: .gitignore
ETL/ETL/: _bezier.h  _hermite.h  etl_config.h
synfig-core/src/: CMakeLists.txt
synfig-core/src/cmake/: catch.cmake
synfig-core/src/modules/: CMakeLists.txt
synfig-core/src/modules/lyr_std/: timeloop.cpp
synfig-core/src/modules/skeleton/: CMakeLists.txt
synfig-core/src/modules/timecurve/: CMakeLists.txt
synfig-core/src/synfig/: CMakeLists.txt  base_types.cpp  base_types.h  canvas.cpp  general.h  layer.cpp  loadcanvas.cpp  loadcanvas.h  main.cpp  node.cpp  node.h  savecanvas.cpp  time.cpp  time.h  timepointcollect.cpp  type.h  uniqueid.cpp  uniqueid.h  valuenode.cpp  waypoint.cpp  waypoint.h
synfig-core/src/synfig/layers/: Makefile_insert  layer_patchgroup.cpp  layer_patchgroup.h  layer_timepatch.cpp  layer_timepatch.h
synfig-core/src/synfig/valuenodes/: CMakeLists.txt  Makefile_insert  animated.cpp  animated.h  timecurve.cpp  timecurve.h  valuenode_animated.cpp  valuenode_animated.h  valuenode_animatedfile.cpp  valuenode_animatedinterface.cpp  valuenode_animatedinterface.h  valuenode_bone.cpp  valuenode_minimalanimatedinterface.cpp  valuenode_minimalanimatedinterface.h  valuenode_patch.cpp  valuenode_patch.h  valuenode_timeloop.cpp
synfig-core/src/synfig/valuenodes/tests/: CMakeLists.txt  timecurve.cpp  valuenode_add.cpp
synfig-studio/src/gui/: app.cpp  canvasview.cpp  canvasview.h  instance.cpp  preview.cpp  workarea.cpp
synfig-studio/src/synfigapp/: action_param.h  instance.cpp  timegather.cpp  value_desc.h
(+32 files in other folders)
